--- a/Analizador lexico y sintactico/templates/index.html
+++ b/Analizador lexico y sintactico/templates/index.html
@@ -53,12 +53,12 @@
             <table>
                 <tr>
                     <th>Tipo de Token</th>
-                    <th>Count</th>
+                    <th>Contador</th>
                 </tr>
-                {% for tipo, count in contador.items() %}
+                {% for tipo, Contador in contador.items() %}
                 <tr>
                     <td>{{ tipo }}</td>
-                    <td>{{ count }}</td>
+                    <td>{{ Contador }}</td>
                 </tr>
                 {% endfor %}
             </table>
